//
//  DictionaryOperationsIdentifiers.swift
//  CollectionsApp
//
//  Created by Nikita Volkodav on 18.01.2023.
//

enum DictionaryOperationsIdentifiers {
    
    static let findFirsContactArray = "Find the first contact"
    static let findFirstContactDictionary = "Find the first contact."
    static let findLastContactArray = "Find the last contact"
    static let findLastContactDictionary = "Find the last contact."
    static let searchNonExistingElementArray = "Search for a non-existing element"
    static let searchNonExistingElementDictionary = "Search for a non-existing element."
}
