...
        super.viewDidLoad()
        createdBookArrayAndBookDictionaryAsync()
        accessibilityLabel()
    }
    
    private func accessibilityLabel() {
        collectionViewDictionary.accessibilityLabel = "Dictionary Collection"
        indicator.accessibilityLabel = "Indicator in progress"
    }
    
    private func showCollectionViewAndConstantLabel() {
        collectionViewDictionary.isHidden = false
        arrayLabel.isHidden = false
        dictionaryLabel.isHidden = false
...
