...
//
//  Created by Nikita Volkodav on 08.01.2023.
//

struct TitlesService {
    
    let titlesVC: [TitleVC] = [TitleVC(title: "Array"),
                               TitleVC(title: "Set"),
                               TitleVC(title: "Dictionary")]
    
    let titlesArrayCell: [TitleArrayCell] = [TitleArrayCell(title:          ArrayOperationsIdentifiers.insert1000BeginningOneBeOne),
                                             TitleArrayCell(title: ArrayOperationsIdentifiers.insert1000BeginningAtOnce),
                                             TitleArrayCell(title: ArrayOperationsIdentifiers.insert1000MiddleOneBeOne),
                                             TitleArrayCell(title: ArrayOperationsIdentifiers.insert1000MiddleAtOnce),
                                             TitleArrayCell(title: ArrayOperationsIdentifiers.insert1000EndOneBeOne),
...
